Sun Feb 25 17:26:37 UTC 2007  Jaiganesh B  <jai.dre.vanderbilt.edu>

        * bin/tao_orb_tests.lst:
        
          Added the DiffServ policy test's run_test.pl.

Sat Feb 24 23:01:16 UTC 2007  Steve Huston  <shuston@riverace.com>

        * configure.ac: Added ACE_CHECK_LACKS_FUNCS(alphasort)

Sat Feb 24 22:51:09 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/config-sunos5.5.h:
        * ace/config-sunos5.10.h: Add ACE_LACKS_ALPHASORT at Solaris 2.5 and
          remove it at Solaris 10. Solaris 8 and 9 have an alphasort() but
          only for use with the BSD cc compiler and with disclaimer that it's
          not supported for use with system libraries nor with multiple
          threads. Solaris 10 brings it into supported use.

Sat Feb 24 17:03:47 UTC 2007  Steve Huston  <shuston@riverace.com>

        * examples/NT_Service/main.cpp:
        * examples/NT_Service/nt_svc.{h cpp}: Don't check for disabling
          macros until a config file has been included, else it never builds
          anywhere. Thanks to Johnny Willemsen for pointing this out.

Sat Feb 24 09:01:19 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/config-linux.h:

          AIO support pulls in the rt library, which pulls in the pthread
          library.  Disable AIO in single-threaded builds.

        * tests/Recursive_Mutex_Test.cpp:

          Check if ACE_Recursive_Thread_Mutex::get_nesting_level() is
          supported before attempting to use it.

Sat Feb 24 08:34:08 UTC 2007  Olli Savia  <ops@iki.fi>

        * ace/config-openvms.h:
        * ace/config-qnx-rtp-62x.h:
        * ace/config-qnx-rtp-pre62x.h:
          Added ACE_LACKS_ALPHASORT.

Fri Feb 23 23:10:17 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * tests/Recursive_Mutex_Test.cpp (test_recursion_depth):

          Issue error messages instead of assert()ing.  VxWorks builds
          will hang on a crash.  Thanks to Johnny for pointing this out.
