@@ -1072,10 +1072,10 @@ ACE_Process_Options::command_line (const ACE_TCHAR *format, ...)
   if (command_line_buf_len_ < 1)
     return -1;
 
-#if !defined (ACE_LACKS_VSNPRINTF)
-  // sprintf the format and args into command_line_buf__.
+#if !defined (ACE_LACKS_VSNPRINTF) || defined (ACE_HAS_TRIO)
+  // vsnprintf the format and args into command_line_buf__.
   ACE_OS::vsnprintf (command_line_buf_,
-                     command_line_buf_len_ - 1,
+                     command_line_buf_len_,
                      format,
                      argp);
 #else
